--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
     <h1>Hola Dime a quien quieres saludar</h1>
     <form action= "/" method = "post">
         <input type="text" name = "nombre"></input>
-        <input type="submit" value="¡Hola122!"></input>
+        <input type="submit" value="¡Hola!"></input>
     </form>
